--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "lint:style": "npx stylelint \"**/*.(s?css|vue)\""
   },
   "dependencies": {
+    "@primevue/themes": "^4.1.0",
+    "primevue": "^4.1.0",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
@@ -20,13 +22,16 @@
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-airbnb": "^8.0.0",
     "@vue/eslint-config-prettier": "^9.0.0",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-vue": "^9.23.0",
+    "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "prettier": "^3.2.5",
     "stylelint": "^16.9.0",
     "stylelint-config-standard": "^36.0.1",
     "stylelint-config-standard-vue": "^1.0.0",
+    "tailwindcss": "^3.4.13",
     "vite": "^5.3.1",
     "vite-plugin-vue-devtools": "^7.3.1"
   }
