--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-emoji-picker": "^1.1.8"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
