--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "primeicons": "^7.0.0",
     "primevue": "^4.1.0",
     "vue": "^3.4.29",
+    "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.3.3",
     "vue3-emoji-picker": "^1.1.8"
   },
