add import path aliases

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@primevue/themes": "^4.1.0",
     "@vueuse/core": "^11.1.0",
     "primeicons": "^7.0.0",
-    "primevue": "^4.1.0",
+    "primevue": "^4.2.5",
     "vue": "^3.4.29",
     "vue-confetti-explosion": "^1.0.2",
     "vue-router": "^4.3.3",
@@ -28,6 +28,7 @@
     "@vue/eslint-config-prettier": "^9.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-vue": "^9.23.0",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
