--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,8 @@
     "target": "ESNext",
     "types": ["vite/client"],
     "moduleResolution": "node",
-    "module": "ESNext"
+    "module": "ESNext",
+    "skipLibCheck": true
   },
   "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
