--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "autoprefixer": "^10.4.20",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-vue": "^9.32.0",
+    "jsdom": "^26.0.0",
     "postcss": "^8.4.47",
     "postcss-html": "^1.7.0",
     "prettier": "^3.2.5",
